[package]
name = "stabilityai"
version = "0.1.0"
authors = ["Himanshu Neema"]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["stabilityai", "async", "openapi", "ai"]
description = "stability.ai library based on OpenAPI spec"
edition = "2021"
rust-version = "1.71.1"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/stabilityai"
repository = "https://github.com/64bit/stabilityai"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.2"
futures = "0.3.28"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = [
    "json",
    "stream",
    "multipart",
], default-features = false }
serde = { version = "1.0.186", features = ["derive", "rc"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["fs", "macros"] }
tokio-util = { version = "0.7.8", features = ["codec", "io-util"] }
tracing = "0.1.37"
derive_builder = "0.12.0"
async-convert = "1.0.0"

[dev-dependencies]
tokio-test = "0.4.3"
